--- a/package.json
+++ b/package.json
@@ -7,16 +7,25 @@
     "dev": "nodemon app.js",
     "start": "node app.js"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "sites",
+    "places",
+    "friends"
+  ],
+  "author": "Dema.Corp",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "http-errors": "^2.0.0",
+    "iconv-lite": "^0.6.3",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.8.0",
-    "mongoose": "^6.5.0"
+    "mongoose": "^6.6.2",
+    "multer": "^1.4.5-lts.1",
+    "sharp": "^0.31.1"
   },
   "devDependencies": {
     "jest": "^28.1.3",
